修改供应商变更日期返回对象，页面修改确认和取消

--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Index.cshtml
@@ -252,8 +252,10 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-md-6"><button class="form-control btn-primary" id="po-search">查询</button></td>
-                            <td class="col-md-6"><button class="form-control" id="po-reset">重置</button></td>
+                            <td colspan="2"><button class="form-control btn-primary" id="po-search">查询</button></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><button class="form-control" id="po-reset">重置</button></td>
                         </tr>
                     </table>
                 </td>
